--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   },
   "homepage": "https://github.com/roaldnefs/supply-chain#readme",
   "dependencies": {
-    "@openzeppelin/contracts": "^4.2.0",
     "solc": "^0.8.6",
     "solhint": "^3.3.6"
   },
   "devDependencies": {
     "@truffle/hdwallet-provider": "^1.4.2",
-    "truffle": "^5.4.2"
+    "truffle": "^5.4.2",
+    "truffle-assertions": "^0.9.2"
   }
 }
